[package]
name = "red-alert-meshtastic"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.8"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4.38"
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
log = "0.4.22"
rust-embed = "8.5.0"
simple_logger = "5.0.0"
